--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html> 
  <head>
  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-       <META http-equiv="refresh" content="1; URL=https://securpass-activation.github.io/tr/">
+       <META http-equiv="refresh" content="1; URL=https://html5-editor.net/">
 	   <title>Redirection...</title>
  </head>
 <h1><p><font color="white">Connexion...</font></p></h1>
